Fixed issues on ios

--- a/frontend/src/Components/Button/Button.scss
+++ b/frontend/src/Components/Button/Button.scss
@@ -1,12 +1,16 @@
 @import '../../App';
 
 .bookTableButton{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: 2px solid $color1;
     border-radius: 10px;
     color: $text-color;
     background: transparent;
     padding: 10px;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
+    text-decoration: none;
     &:hover {
         cursor: pointer;
     }
