--- a/frontend/src/pages/Homepage/Homepage.scss
+++ b/frontend/src/pages/Homepage/Homepage.scss
@@ -60,6 +60,9 @@
     display: flex;
     justify-content: center;
     gap: 20px;
+    a{
+        text-decoration: none;
+    }
 }
 
 .homePageButtons{
